Corrected home element's spacing

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ navigation {
 }
 
 navigation ul {
-    width: 1000px;
+    width: 1001px;
     overflow: auto;
     padding: 0;
     margin: 0 auto;
@@ -106,7 +106,7 @@ navigation li a:hover, navigation li a.selected {
 
 navigation li:first-child a {
     border-left: 1px solid #5a2c0b;
-    width: 188px;
+    width: 189px;
 }
 
 section {
@@ -155,9 +155,9 @@ section h1:before {
    bottom:0;
    left:0;
    right:0;
-   background: url(../img/home-1.png) 800px 51px no-repeat,
-      url(../img/home-2.png) 600px bottom no-repeat,
-      url(../img/home-3.png) 200px bottom no-repeat;
+   background: url(../img/home-1.png) 801px 51px no-repeat,
+      url(../img/home-2.png) 601px bottom no-repeat,
+      url(../img/home-3.png) 201px bottom no-repeat;
    opacity:0.7;
 }
 
